exports[`no-zero-fractions > invalid(1): [.5, .50, -0.50, +0.50, 1., -1., +1.] 1`] = `

  1 | [.5, .50, -0.50, +0.50, 1., -1., +1.]

`;

exports[`no-zero-fractions > invalid(1): [.5, .50, -0.50, +0.50, 1., -1., +1.] 2`] = `

Message:
> 1 | [.5, .50, -0.50, +0.50, 1., -1., +1.]
    |  ^^ Use a leading zero before the decimal point.

Output:
  1 | [0.5, .50, -0.50, +0.50, 1., -1., +1.]

`;

exports[`no-zero-fractions > invalid(1): [.5, .50, -0.50, +0.50, 1., -1., +1.] 3`] = `

Message:
> 1 | [.5, .50, -0.50, +0.50, 1., -1., +1.]
    |      ^^^ Use a leading zero before the decimal point.

Output:
  1 | [.5, 0.5, -0.50, +0.50, 1., -1., +1.]

`;

exports[`no-zero-fractions > invalid(1): [.5, .50, -0.50, +0.50, 1., -1., +1.] 4`] = `

Message:
> 1 | [.5, .50, -0.50, +0.50, 1., -1., +1.]
    |               ^ Don't use a zero fraction in the number.

Output:
  1 | [.5, .50, -0.5, +0.50, 1., -1., +1.]

`;

exports[`no-zero-fractions > invalid(1): [.5, .50, -0.50, +0.50, 1., -1., +1.] 5`] = `

Message:
> 1 | [.5, .50, -0.50, +0.50, 1., -1., +1.]
    |                      ^ Don't use a zero fraction in the number.

Output:
  1 | [.5, .50, -0.50, +0.5, 1., -1., +1.]

`;

exports[`no-zero-fractions > invalid(1): [.5, .50, -0.50, +0.50, 1., -1., +1.] 6`] = `

Message:
> 1 | [.5, .50, -0.50, +0.50, 1., -1., +1.]
    |                          ^ Don't use a dangling dot in the number.

Output:
  1 | [.5, .50, -0.50, +0.50, 1, -1., +1.]

`;

exports[`no-zero-fractions > invalid(1): [.5, .50, -0.50, +0.50, 1., -1., +1.] 7`] = `

Message:
> 1 | [.5, .50, -0.50, +0.50, 1., -1., +1.]
    |                               ^ Don't use a dangling dot in the number.

Output:
  1 | [.5, .50, -0.50, +0.50, 1., -1, +1.]

`;

exports[`no-zero-fractions > invalid(1): [.5, .50, -0.50, +0.50, 1., -1., +1.] 8`] = `

Message:
> 1 | [.5, .50, -0.50, +0.50, 1., -1., +1.]
    |                                    ^ Don't use a dangling dot in the number.

Output:
  1 | [.5, .50, -0.50, +0.50, 1., -1., +1]

`;

exports[`no-zero-fractions > invalid(1): [1.0, -1.00, 1.50, 1.00e2] 1`] = `

  1 | [1.0, -1.00, 1.50, 1.00e2]

`;

exports[`no-zero-fractions > invalid(1): [1.0, -1.00, 1.50, 1.00e2] 2`] = `

Message:
> 1 | [1.0, -1.00, 1.50, 1.00e2]
    |   ^^ Don't use a zero fraction in the number.

Output:
  1 | [1, -1.00, 1.50, 1.00e2]

`;

exports[`no-zero-fractions > invalid(1): [1.0, -1.00, 1.50, 1.00e2] 3`] = `

Message:
> 1 | [1.0, -1.00, 1.50, 1.00e2]
    |         ^^^ Don't use a zero fraction in the number.

Output:
  1 | [1.0, -1, 1.50, 1.00e2]

`;

exports[`no-zero-fractions > invalid(1): [1.0, -1.00, 1.50, 1.00e2] 4`] = `

Message:
> 1 | [1.0, -1.00, 1.50, 1.00e2]
    |                 ^ Don't use a zero fraction in the number.

Output:
  1 | [1.0, -1.00, 1.5, 1.00e2]

`;

exports[`no-zero-fractions > invalid(1): [1.0, -1.00, 1.50, 1.00e2] 5`] = `

Message:
> 1 | [1.0, -1.00, 1.50, 1.00e2]
    |                     ^^^ Don't use a zero fraction in the number.

Output:
  1 | [1.0, -1.00, 1.50, 1e2]

`;

exports[`no-zero-fractions > invalid(1): a { width: 2.0PX; animation-delay: .5s; opacity: -.50; height: 10.00%; } 1`] = `

  1 | a { width: 2.0PX; animation-delay: .5s; opacity: -.50; height: 10.00%; }

`;

exports[`no-zero-fractions > invalid(1): a { width: 2.0PX; animation-delay: .5s; opacity: -.50; height: 10.00%; } 2`] = `

Message:
> 1 | a { width: 2.0PX; animation-delay: .5s; opacity: -.50; height: 10.00%; }
    |             ^^ Don't use a zero fraction in the number.

Output:
  1 | a { width: 2PX; animation-delay: .5s; opacity: -.50; height: 10.00%; }

`;

exports[`no-zero-fractions > invalid(1): a { width: 2.0PX; animation-delay: .5s; opacity: -.50; height: 10.00%; } 3`] = `

Message:
> 1 | a { width: 2.0PX; animation-delay: .5s; opacity: -.50; height: 10.00%; }
    |                                    ^^ Use a leading zero before the decimal point.

Output:
  1 | a { width: 2.0PX; animation-delay: 0.5s; opacity: -.50; height: 10.00%; }

`;

exports[`no-zero-fractions > invalid(1): a { width: 2.0PX; animation-delay: .5s; opacity: -.50; height: 10.00%; } 4`] = `

Message:
> 1 | a { width: 2.0PX; animation-delay: .5s; opacity: -.50; height: 10.00%; }
    |                                                   ^^^ Use a leading zero before the decimal point.

Output:
  1 | a { width: 2.0PX; animation-delay: .5s; opacity: -0.5; height: 10.00%; }

`;

exports[`no-zero-fractions > invalid(1): a { width: 2.0PX; animation-delay: .5s; opacity: -.50; height: 10.00%; } 5`] = `

Message:
> 1 | a { width: 2.0PX; animation-delay: .5s; opacity: -.50; height: 10.00%; }
    |                                                                  ^^^ Don't use a zero fraction in the number.

Output:
  1 | a { width: 2.0PX; animation-delay: .5s; opacity: -.50; height: 10%; }

`;

exports[`no-zero-fractions > invalid(1): const foo = 1.0 1`] = `

  1 | const foo = 1.0

`;

exports[`no-zero-fractions > invalid(1): const foo = 1.0 2`] = `

Message:
> 1 | const foo = 1.0
    |              ^^ Don't use a zero fraction in the number.

Output:
  1 | const foo = 1

`;

exports[`no-zero-fractions > invalid(1): const value = .5; 1`] = `

  1 | const value = .5;

`;

exports[`no-zero-fractions > invalid(1): const value = .5; 2`] = `

Message:
> 1 | const value = .5;
    |               ^^ Use a leading zero before the decimal point.

Output:
  1 | const value = 0.5;

`;

exports[`no-zero-fractions > invalid(1): value = [1.00, -1.00, +1.00, 1.50, 1.00e2, 1_000.00] 1`] = `

  1 | value = [1.00, -1.00, +1.00, 1.50, 1.00e2, 1_000.00]

`;

exports[`no-zero-fractions > invalid(1): value = [1.00, -1.00, +1.00, 1.50, 1.00e2, 1_000.00] 2`] = `

Message:
> 1 | value = [1.00, -1.00, +1.00, 1.50, 1.00e2, 1_000.00]
    |             ^ Don't use a zero fraction in the number.

Output:
  1 | value = [1.0, -1.00, +1.00, 1.50, 1.00e2, 1_000.00]

`;

exports[`no-zero-fractions > invalid(1): value = [1.00, -1.00, +1.00, 1.50, 1.00e2, 1_000.00] 3`] = `

Message:
> 1 | value = [1.00, -1.00, +1.00, 1.50, 1.00e2, 1_000.00]
    |                    ^ Don't use a zero fraction in the number.

Output:
  1 | value = [1.00, -1.0, +1.00, 1.50, 1.00e2, 1_000.00]

`;

exports[`no-zero-fractions > invalid(1): value = [1.00, -1.00, +1.00, 1.50, 1.00e2, 1_000.00] 4`] = `

Message:
> 1 | value = [1.00, -1.00, +1.00, 1.50, 1.00e2, 1_000.00]
    |                           ^ Don't use a zero fraction in the number.

Output:
  1 | value = [1.00, -1.00, +1.0, 1.50, 1.00e2, 1_000.00]

`;

exports[`no-zero-fractions > invalid(1): value = [1.00, -1.00, +1.00, 1.50, 1.00e2, 1_000.00] 5`] = `

Message:
> 1 | value = [1.00, -1.00, +1.00, 1.50, 1.00e2, 1_000.00]
    |                                 ^ Don't use a zero fraction in the number.

Output:
  1 | value = [1.00, -1.00, +1.00, 1.5, 1.00e2, 1_000.00]

`;

exports[`no-zero-fractions > invalid(1): value = [1.00, -1.00, +1.00, 1.50, 1.00e2, 1_000.00] 6`] = `

Message:
> 1 | value = [1.00, -1.00, +1.00, 1.50, 1.00e2, 1_000.00]
    |                                     ^^^ Don't use a zero fraction in the number.

Output:
  1 | value = [1.00, -1.00, +1.00, 1.50, 1e2, 1_000.00]

`;

exports[`no-zero-fractions > invalid(1): value = [1.00, -1.00, +1.00, 1.50, 1.00e2, 1_000.00] 7`] = `

Message:
> 1 | value = [1.00, -1.00, +1.00, 1.50, 1.00e2, 1_000.00]
    |                                                   ^ Don't use a zero fraction in the number.

Output:
  1 | value = [1.00, -1.00, +1.00, 1.50, 1.00e2, 1_000.0]

`;

exports[`no-zero-fractions > invalid(1): value: [.5, -.50, +.50, 1.00, -1.00, 1.50, 1.00e2, 1.] # preserve 1`] = `

  1 | value: [.5, -.50, +.50, 1.00, -1.00, 1.50, 1.00e2, 1.] # preserve

`;

exports[`no-zero-fractions > invalid(1): value: [.5, -.50, +.50, 1.00, -1.00, 1.50, 1.00e2, 1.] # preserve 2`] = `

Message:
> 1 | value: [.5, -.50, +.50, 1.00, -1.00, 1.50, 1.00e2, 1.] # preserve
    |         ^^ Use a leading zero before the decimal point.

Output:
  1 | value: [0.5, -.50, +.50, 1.00, -1.00, 1.50, 1.00e2, 1.] # preserve

`;

exports[`no-zero-fractions > invalid(1): value: [.5, -.50, +.50, 1.00, -1.00, 1.50, 1.00e2, 1.] # preserve 3`] = `

Message:
> 1 | value: [.5, -.50, +.50, 1.00, -1.00, 1.50, 1.00e2, 1.] # preserve
    |              ^^^ Use a leading zero before the decimal point.

Output:
  1 | value: [.5, -0.5, +.50, 1.00, -1.00, 1.50, 1.00e2, 1.] # preserve

`;

exports[`no-zero-fractions > invalid(1): value: [.5, -.50, +.50, 1.00, -1.00, 1.50, 1.00e2, 1.] # preserve 4`] = `

Message:
> 1 | value: [.5, -.50, +.50, 1.00, -1.00, 1.50, 1.00e2, 1.] # preserve
    |                    ^^^ Use a leading zero before the decimal point.

Output:
  1 | value: [.5, -.50, +0.5, 1.00, -1.00, 1.50, 1.00e2, 1.] # preserve

`;

exports[`no-zero-fractions > invalid(1): value: [.5, -.50, +.50, 1.00, -1.00, 1.50, 1.00e2, 1.] # preserve 5`] = `

Message:
> 1 | value: [.5, -.50, +.50, 1.00, -1.00, 1.50, 1.00e2, 1.] # preserve
    |                            ^ Don't use a zero fraction in the number.

Output:
  1 | value: [.5, -.50, +.50, 1.0, -1.00, 1.50, 1.00e2, 1.] # preserve

`;

exports[`no-zero-fractions > invalid(1): value: [.5, -.50, +.50, 1.00, -1.00, 1.50, 1.00e2, 1.] # preserve 6`] = `

Message:
> 1 | value: [.5, -.50, +.50, 1.00, -1.00, 1.50, 1.00e2, 1.] # preserve
    |                                   ^ Don't use a zero fraction in the number.

Output:
  1 | value: [.5, -.50, +.50, 1.00, -1.0, 1.50, 1.00e2, 1.] # preserve

`;

exports[`no-zero-fractions > invalid(1): value: [.5, -.50, +.50, 1.00, -1.00, 1.50, 1.00e2, 1.] # preserve 7`] = `

Message:
> 1 | value: [.5, -.50, +.50, 1.00, -1.00, 1.50, 1.00e2, 1.] # preserve
    |                                         ^ Don't use a zero fraction in the number.

Output:
  1 | value: [.5, -.50, +.50, 1.00, -1.00, 1.5, 1.00e2, 1.] # preserve

`;

exports[`no-zero-fractions > invalid(1): value: [.5, -.50, +.50, 1.00, -1.00, 1.50, 1.00e2, 1.] # preserve 8`] = `

Message:
> 1 | value: [.5, -.50, +.50, 1.00, -1.00, 1.50, 1.00e2, 1.] # preserve
    |                                               ^ Don't use a zero fraction in the number.

Output:
  1 | value: [.5, -.50, +.50, 1.00, -1.00, 1.50, 1.0e2, 1.] # preserve

`;

exports[`no-zero-fractions > invalid(1): value: [.5, -.50, +.50, 1.00, -1.00, 1.50, 1.00e2, 1.] # preserve 9`] = `

Message:
> 1 | value: [.5, -.50, +.50, 1.00, -1.00, 1.50, 1.00e2, 1.] # preserve
    |                                                      ^ Don't use a dangling dot in the number.

Output:
  1 | value: [.5, -.50, +.50, 1.00, -1.00, 1.50, 1.00e2, 1.0] # preserve

`;

exports[`no-zero-fractions > invalid(10): a[.0] 1`] = `

  1 | a[.0]

`;

exports[`no-zero-fractions > invalid(10): a[.0] 2`] = `

Message:
> 1 | a[.0]
    |    ^ Don't use a zero fraction in the number.

Output:
  1 | a[0]

`;

exports[`no-zero-fractions > invalid(100): +123_000.000_000e+0; 1`] = `

  1 | +123_000.000_000e+0;

`;

exports[`no-zero-fractions > invalid(100): +123_000.000_000e+0; 2`] = `

Message:
> 1 | +123_000.000_000e+0;
    |         ^^^^^^^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000e+0;

`;

exports[`no-zero-fractions > invalid(101): -123_000.000_000e+0; 1`] = `

  1 | -123_000.000_000e+0;

`;

exports[`no-zero-fractions > invalid(101): -123_000.000_000e+0; 2`] = `

Message:
> 1 | -123_000.000_000e+0;
    |         ^^^^^^^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000e+0;

`;

exports[`no-zero-fractions > invalid(102): +123_000.000_000e-0; 1`] = `

  1 | +123_000.000_000e-0;

`;

exports[`no-zero-fractions > invalid(102): +123_000.000_000e-0; 2`] = `

Message:
> 1 | +123_000.000_000e-0;
    |         ^^^^^^^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000e-0;

`;

exports[`no-zero-fractions > invalid(103): -123_000.000_000e-0; 1`] = `

  1 | -123_000.000_000e-0;

`;

exports[`no-zero-fractions > invalid(103): -123_000.000_000e-0; 2`] = `

Message:
> 1 | -123_000.000_000e-0;
    |         ^^^^^^^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000e-0;

`;

exports[`no-zero-fractions > invalid(104): +123_000.000_000e10; 1`] = `

  1 | +123_000.000_000e10;

`;

exports[`no-zero-fractions > invalid(104): +123_000.000_000e10; 2`] = `

Message:
> 1 | +123_000.000_000e10;
    |         ^^^^^^^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000e10;

`;

exports[`no-zero-fractions > invalid(105): -123_000.000_000e10; 1`] = `

  1 | -123_000.000_000e10;

`;

exports[`no-zero-fractions > invalid(105): -123_000.000_000e10; 2`] = `

Message:
> 1 | -123_000.000_000e10;
    |         ^^^^^^^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000e10;

`;

exports[`no-zero-fractions > invalid(106): +123_000.000_000e+10; 1`] = `

  1 | +123_000.000_000e+10;

`;

exports[`no-zero-fractions > invalid(106): +123_000.000_000e+10; 2`] = `

Message:
> 1 | +123_000.000_000e+10;
    |         ^^^^^^^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000e+10;

`;

exports[`no-zero-fractions > invalid(107): -123_000.000_000e+10; 1`] = `

  1 | -123_000.000_000e+10;

`;

exports[`no-zero-fractions > invalid(107): -123_000.000_000e+10; 2`] = `

Message:
> 1 | -123_000.000_000e+10;
    |         ^^^^^^^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000e+10;

`;

exports[`no-zero-fractions > invalid(108): +123_000.000_000e-10; 1`] = `

  1 | +123_000.000_000e-10;

`;

exports[`no-zero-fractions > invalid(108): +123_000.000_000e-10; 2`] = `

Message:
> 1 | +123_000.000_000e-10;
    |         ^^^^^^^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000e-10;

`;

exports[`no-zero-fractions > invalid(109): -123_000.000_000e-10; 1`] = `

  1 | -123_000.000_000e-10;

`;

exports[`no-zero-fractions > invalid(109): -123_000.000_000e-10; 2`] = `

Message:
> 1 | -123_000.000_000e-10;
    |         ^^^^^^^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000e-10;

`;

exports[`no-zero-fractions > invalid(11): const foo = 1. 1`] = `

  1 | const foo = 1.

`;

exports[`no-zero-fractions > invalid(11): const foo = 1. 2`] = `

Message:
> 1 | const foo = 1.
    |              ^ Don't use a dangling dot in the number.

Output:
  1 | const foo = 1

`;

exports[`no-zero-fractions > invalid(110): +123_000.000_000E-10; 1`] = `

  1 | +123_000.000_000E-10;

`;

exports[`no-zero-fractions > invalid(110): +123_000.000_000E-10; 2`] = `

Message:
> 1 | +123_000.000_000E-10;
    |         ^^^^^^^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000E-10;

`;

exports[`no-zero-fractions > invalid(111): -123_000.000_000E-10; 1`] = `

  1 | -123_000.000_000E-10;

`;

exports[`no-zero-fractions > invalid(111): -123_000.000_000E-10; 2`] = `

Message:
> 1 | -123_000.000_000E-10;
    |         ^^^^^^^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000E-10;

`;

exports[`no-zero-fractions > invalid(112): +123_000.000_000E-10_10; 1`] = `

  1 | +123_000.000_000E-10_10;

`;

exports[`no-zero-fractions > invalid(112): +123_000.000_000E-10_10; 2`] = `

Message:
> 1 | +123_000.000_000E-10_10;
    |         ^^^^^^^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000E-10_10;

`;

exports[`no-zero-fractions > invalid(113): -123_000.000_000E-10_10; 1`] = `

  1 | -123_000.000_000E-10_10;

`;

exports[`no-zero-fractions > invalid(113): -123_000.000_000E-10_10; 2`] = `

Message:
> 1 | -123_000.000_000E-10_10;
    |         ^^^^^^^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000E-10_10;

`;

exports[`no-zero-fractions > invalid(114): +123_000.123_000; 1`] = `

  1 | +123_000.123_000;

`;

exports[`no-zero-fractions > invalid(114): +123_000.123_000; 2`] = `

Message:
> 1 | +123_000.123_000;
    |             ^^^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000.123;

`;

exports[`no-zero-fractions > invalid(115): -123_000.123_000; 1`] = `

  1 | -123_000.123_000;

`;

exports[`no-zero-fractions > invalid(115): -123_000.123_000; 2`] = `

Message:
> 1 | -123_000.123_000;
    |             ^^^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000.123;

`;

exports[`no-zero-fractions > invalid(116): +123_000.123_000e1; 1`] = `

  1 | +123_000.123_000e1;

`;

exports[`no-zero-fractions > invalid(116): +123_000.123_000e1; 2`] = `

Message:
> 1 | +123_000.123_000e1;
    |             ^^^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000.123e1;

`;

exports[`no-zero-fractions > invalid(117): -123_000.123_000e1; 1`] = `

  1 | -123_000.123_000e1;

`;

exports[`no-zero-fractions > invalid(117): -123_000.123_000e1; 2`] = `

Message:
> 1 | -123_000.123_000e1;
    |             ^^^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000.123e1;

`;

exports[`no-zero-fractions > invalid(118): +123_000.123_000e+1; 1`] = `

  1 | +123_000.123_000e+1;

`;

exports[`no-zero-fractions > invalid(118): +123_000.123_000e+1; 2`] = `

Message:
> 1 | +123_000.123_000e+1;
    |             ^^^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000.123e+1;

`;

exports[`no-zero-fractions > invalid(119): -123_000.123_000e+1; 1`] = `

  1 | -123_000.123_000e+1;

`;

exports[`no-zero-fractions > invalid(119): -123_000.123_000e+1; 2`] = `

Message:
> 1 | -123_000.123_000e+1;
    |             ^^^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000.123e+1;

`;

exports[`no-zero-fractions > invalid(12): const foo = +1. 1`] = `

  1 | const foo = +1.

`;

exports[`no-zero-fractions > invalid(12): const foo = +1. 2`] = `

Message:
> 1 | const foo = +1.
    |               ^ Don't use a dangling dot in the number.

Output:
  1 | const foo = +1

`;

exports[`no-zero-fractions > invalid(120): +123_000.123_000e-1; 1`] = `

  1 | +123_000.123_000e-1;

`;

exports[`no-zero-fractions > invalid(120): +123_000.123_000e-1; 2`] = `

Message:
> 1 | +123_000.123_000e-1;
    |             ^^^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000.123e-1;

`;

exports[`no-zero-fractions > invalid(121): -123_000.123_000e-1; 1`] = `

  1 | -123_000.123_000e-1;

`;

exports[`no-zero-fractions > invalid(121): -123_000.123_000e-1; 2`] = `

Message:
> 1 | -123_000.123_000e-1;
    |             ^^^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000.123e-1;

`;

exports[`no-zero-fractions > invalid(122): +123_000.123_000e0; 1`] = `

  1 | +123_000.123_000e0;

`;

exports[`no-zero-fractions > invalid(122): +123_000.123_000e0; 2`] = `

Message:
> 1 | +123_000.123_000e0;
    |             ^^^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000.123e0;

`;

exports[`no-zero-fractions > invalid(123): -123_000.123_000e0; 1`] = `

  1 | -123_000.123_000e0;

`;

exports[`no-zero-fractions > invalid(123): -123_000.123_000e0; 2`] = `

Message:
> 1 | -123_000.123_000e0;
    |             ^^^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000.123e0;

`;

exports[`no-zero-fractions > invalid(124): +123_000.123_000e+0; 1`] = `

  1 | +123_000.123_000e+0;

`;

exports[`no-zero-fractions > invalid(124): +123_000.123_000e+0; 2`] = `

Message:
> 1 | +123_000.123_000e+0;
    |             ^^^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000.123e+0;

`;

exports[`no-zero-fractions > invalid(125): -123_000.123_000e+0; 1`] = `

  1 | -123_000.123_000e+0;

`;

exports[`no-zero-fractions > invalid(125): -123_000.123_000e+0; 2`] = `

Message:
> 1 | -123_000.123_000e+0;
    |             ^^^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000.123e+0;

`;

exports[`no-zero-fractions > invalid(126): +123_000.123_000e-0; 1`] = `

  1 | +123_000.123_000e-0;

`;

exports[`no-zero-fractions > invalid(126): +123_000.123_000e-0; 2`] = `

Message:
> 1 | +123_000.123_000e-0;
    |             ^^^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000.123e-0;

`;

exports[`no-zero-fractions > invalid(127): -123_000.123_000e-0; 1`] = `

  1 | -123_000.123_000e-0;

`;

exports[`no-zero-fractions > invalid(127): -123_000.123_000e-0; 2`] = `

Message:
> 1 | -123_000.123_000e-0;
    |             ^^^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000.123e-0;

`;

exports[`no-zero-fractions > invalid(128): +123_000.123_000e10; 1`] = `

  1 | +123_000.123_000e10;

`;

exports[`no-zero-fractions > invalid(128): +123_000.123_000e10; 2`] = `

Message:
> 1 | +123_000.123_000e10;
    |             ^^^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000.123e10;

`;

exports[`no-zero-fractions > invalid(129): -123_000.123_000e10; 1`] = `

  1 | -123_000.123_000e10;

`;

exports[`no-zero-fractions > invalid(129): -123_000.123_000e10; 2`] = `

Message:
> 1 | -123_000.123_000e10;
    |             ^^^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000.123e10;

`;

exports[`no-zero-fractions > invalid(13): const foo = -1. 1`] = `

  1 | const foo = -1.

`;

exports[`no-zero-fractions > invalid(13): const foo = -1. 2`] = `

Message:
> 1 | const foo = -1.
    |               ^ Don't use a dangling dot in the number.

Output:
  1 | const foo = -1

`;

exports[`no-zero-fractions > invalid(130): +123_000.123_000e+10; 1`] = `

  1 | +123_000.123_000e+10;

`;

exports[`no-zero-fractions > invalid(130): +123_000.123_000e+10; 2`] = `

Message:
> 1 | +123_000.123_000e+10;
    |             ^^^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000.123e+10;

`;

exports[`no-zero-fractions > invalid(131): -123_000.123_000e+10; 1`] = `

  1 | -123_000.123_000e+10;

`;

exports[`no-zero-fractions > invalid(131): -123_000.123_000e+10; 2`] = `

Message:
> 1 | -123_000.123_000e+10;
    |             ^^^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000.123e+10;

`;

exports[`no-zero-fractions > invalid(132): +123_000.123_000e-10; 1`] = `

  1 | +123_000.123_000e-10;

`;

exports[`no-zero-fractions > invalid(132): +123_000.123_000e-10; 2`] = `

Message:
> 1 | +123_000.123_000e-10;
    |             ^^^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000.123e-10;

`;

exports[`no-zero-fractions > invalid(133): -123_000.123_000e-10; 1`] = `

  1 | -123_000.123_000e-10;

`;

exports[`no-zero-fractions > invalid(133): -123_000.123_000e-10; 2`] = `

Message:
> 1 | -123_000.123_000e-10;
    |             ^^^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000.123e-10;

`;

exports[`no-zero-fractions > invalid(134): +123_000.123_000E-10; 1`] = `

  1 | +123_000.123_000E-10;

`;

exports[`no-zero-fractions > invalid(134): +123_000.123_000E-10; 2`] = `

Message:
> 1 | +123_000.123_000E-10;
    |             ^^^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000.123E-10;

`;

exports[`no-zero-fractions > invalid(135): -123_000.123_000E-10; 1`] = `

  1 | -123_000.123_000E-10;

`;

exports[`no-zero-fractions > invalid(135): -123_000.123_000E-10; 2`] = `

Message:
> 1 | -123_000.123_000E-10;
    |             ^^^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000.123E-10;

`;

exports[`no-zero-fractions > invalid(136): +123_000.123_000E-10_10; 1`] = `

  1 | +123_000.123_000E-10_10;

`;

exports[`no-zero-fractions > invalid(136): +123_000.123_000E-10_10; 2`] = `

Message:
> 1 | +123_000.123_000E-10_10;
    |             ^^^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000.123E-10_10;

`;

exports[`no-zero-fractions > invalid(137): -123_000.123_000E-10_10; 1`] = `

  1 | -123_000.123_000E-10_10;

`;

exports[`no-zero-fractions > invalid(137): -123_000.123_000E-10_10; 2`] = `

Message:
> 1 | -123_000.123_000E-10_10;
    |             ^^^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000.123E-10_10;

`;

exports[`no-zero-fractions > invalid(138): +123_000.000_400; 1`] = `

  1 | +123_000.000_400;

`;

exports[`no-zero-fractions > invalid(138): +123_000.000_400; 2`] = `

Message:
> 1 | +123_000.000_400;
    |               ^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000.000_4;

`;

exports[`no-zero-fractions > invalid(139): -123_000.000_400; 1`] = `

  1 | -123_000.000_400;

`;

exports[`no-zero-fractions > invalid(139): -123_000.000_400; 2`] = `

Message:
> 1 | -123_000.000_400;
    |               ^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000.000_4;

`;

exports[`no-zero-fractions > invalid(14): const foo = 1.e10 1`] = `

  1 | const foo = 1.e10

`;

exports[`no-zero-fractions > invalid(14): const foo = 1.e10 2`] = `

Message:
> 1 | const foo = 1.e10
    |              ^ Don't use a dangling dot in the number.

Output:
  1 | const foo = 1e10

`;

exports[`no-zero-fractions > invalid(140): +123_000.000_400e1; 1`] = `

  1 | +123_000.000_400e1;

`;

exports[`no-zero-fractions > invalid(140): +123_000.000_400e1; 2`] = `

Message:
> 1 | +123_000.000_400e1;
    |               ^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000.000_4e1;

`;

exports[`no-zero-fractions > invalid(141): -123_000.000_400e1; 1`] = `

  1 | -123_000.000_400e1;

`;

exports[`no-zero-fractions > invalid(141): -123_000.000_400e1; 2`] = `

Message:
> 1 | -123_000.000_400e1;
    |               ^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000.000_4e1;

`;

exports[`no-zero-fractions > invalid(142): +123_000.000_400e+1; 1`] = `

  1 | +123_000.000_400e+1;

`;

exports[`no-zero-fractions > invalid(142): +123_000.000_400e+1; 2`] = `

Message:
> 1 | +123_000.000_400e+1;
    |               ^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000.000_4e+1;

`;

exports[`no-zero-fractions > invalid(143): -123_000.000_400e+1; 1`] = `

  1 | -123_000.000_400e+1;

`;

exports[`no-zero-fractions > invalid(143): -123_000.000_400e+1; 2`] = `

Message:
> 1 | -123_000.000_400e+1;
    |               ^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000.000_4e+1;

`;

exports[`no-zero-fractions > invalid(144): +123_000.000_400e-1; 1`] = `

  1 | +123_000.000_400e-1;

`;

exports[`no-zero-fractions > invalid(144): +123_000.000_400e-1; 2`] = `

Message:
> 1 | +123_000.000_400e-1;
    |               ^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000.000_4e-1;

`;

exports[`no-zero-fractions > invalid(145): -123_000.000_400e-1; 1`] = `

  1 | -123_000.000_400e-1;

`;

exports[`no-zero-fractions > invalid(145): -123_000.000_400e-1; 2`] = `

Message:
> 1 | -123_000.000_400e-1;
    |               ^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000.000_4e-1;

`;

exports[`no-zero-fractions > invalid(146): +123_000.000_400e0; 1`] = `

  1 | +123_000.000_400e0;

`;

exports[`no-zero-fractions > invalid(146): +123_000.000_400e0; 2`] = `

Message:
> 1 | +123_000.000_400e0;
    |               ^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000.000_4e0;

`;

exports[`no-zero-fractions > invalid(147): -123_000.000_400e0; 1`] = `

  1 | -123_000.000_400e0;

`;

exports[`no-zero-fractions > invalid(147): -123_000.000_400e0; 2`] = `

Message:
> 1 | -123_000.000_400e0;
    |               ^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000.000_4e0;

`;

exports[`no-zero-fractions > invalid(148): +123_000.000_400e+0; 1`] = `

  1 | +123_000.000_400e+0;

`;

exports[`no-zero-fractions > invalid(148): +123_000.000_400e+0; 2`] = `

Message:
> 1 | +123_000.000_400e+0;
    |               ^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000.000_4e+0;

`;

exports[`no-zero-fractions > invalid(149): -123_000.000_400e+0; 1`] = `

  1 | -123_000.000_400e+0;

`;

exports[`no-zero-fractions > invalid(149): -123_000.000_400e+0; 2`] = `

Message:
> 1 | -123_000.000_400e+0;
    |               ^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000.000_4e+0;

`;

exports[`no-zero-fractions > invalid(15): const foo = +1.e-10 1`] = `

  1 | const foo = +1.e-10

`;

exports[`no-zero-fractions > invalid(15): const foo = +1.e-10 2`] = `

Message:
> 1 | const foo = +1.e-10
    |               ^ Don't use a dangling dot in the number.

Output:
  1 | const foo = +1e-10

`;

exports[`no-zero-fractions > invalid(150): +123_000.000_400e-0; 1`] = `

  1 | +123_000.000_400e-0;

`;

exports[`no-zero-fractions > invalid(150): +123_000.000_400e-0; 2`] = `

Message:
> 1 | +123_000.000_400e-0;
    |               ^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000.000_4e-0;

`;

exports[`no-zero-fractions > invalid(151): -123_000.000_400e-0; 1`] = `

  1 | -123_000.000_400e-0;

`;

exports[`no-zero-fractions > invalid(151): -123_000.000_400e-0; 2`] = `

Message:
> 1 | -123_000.000_400e-0;
    |               ^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000.000_4e-0;

`;

exports[`no-zero-fractions > invalid(152): +123_000.000_400e10; 1`] = `

  1 | +123_000.000_400e10;

`;

exports[`no-zero-fractions > invalid(152): +123_000.000_400e10; 2`] = `

Message:
> 1 | +123_000.000_400e10;
    |               ^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000.000_4e10;

`;

exports[`no-zero-fractions > invalid(153): -123_000.000_400e10; 1`] = `

  1 | -123_000.000_400e10;

`;

exports[`no-zero-fractions > invalid(153): -123_000.000_400e10; 2`] = `

Message:
> 1 | -123_000.000_400e10;
    |               ^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000.000_4e10;

`;

exports[`no-zero-fractions > invalid(154): +123_000.000_400e+10; 1`] = `

  1 | +123_000.000_400e+10;

`;

exports[`no-zero-fractions > invalid(154): +123_000.000_400e+10; 2`] = `

Message:
> 1 | +123_000.000_400e+10;
    |               ^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000.000_4e+10;

`;

exports[`no-zero-fractions > invalid(155): -123_000.000_400e+10; 1`] = `

  1 | -123_000.000_400e+10;

`;

exports[`no-zero-fractions > invalid(155): -123_000.000_400e+10; 2`] = `

Message:
> 1 | -123_000.000_400e+10;
    |               ^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000.000_4e+10;

`;

exports[`no-zero-fractions > invalid(156): +123_000.000_400e-10; 1`] = `

  1 | +123_000.000_400e-10;

`;

exports[`no-zero-fractions > invalid(156): +123_000.000_400e-10; 2`] = `

Message:
> 1 | +123_000.000_400e-10;
    |               ^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000.000_4e-10;

`;

exports[`no-zero-fractions > invalid(157): -123_000.000_400e-10; 1`] = `

  1 | -123_000.000_400e-10;

`;

exports[`no-zero-fractions > invalid(157): -123_000.000_400e-10; 2`] = `

Message:
> 1 | -123_000.000_400e-10;
    |               ^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000.000_4e-10;

`;

exports[`no-zero-fractions > invalid(158): +123_000.000_400E-10; 1`] = `

  1 | +123_000.000_400E-10;

`;

exports[`no-zero-fractions > invalid(158): +123_000.000_400E-10; 2`] = `

Message:
> 1 | +123_000.000_400E-10;
    |               ^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000.000_4E-10;

`;

exports[`no-zero-fractions > invalid(159): -123_000.000_400E-10; 1`] = `

  1 | -123_000.000_400E-10;

`;

exports[`no-zero-fractions > invalid(159): -123_000.000_400E-10; 2`] = `

Message:
> 1 | -123_000.000_400E-10;
    |               ^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000.000_4E-10;

`;

exports[`no-zero-fractions > invalid(16): const foo = -1.e+10 1`] = `

  1 | const foo = -1.e+10

`;

exports[`no-zero-fractions > invalid(16): const foo = -1.e+10 2`] = `

Message:
> 1 | const foo = -1.e+10
    |               ^ Don't use a dangling dot in the number.

Output:
  1 | const foo = -1e+10

`;

exports[`no-zero-fractions > invalid(160): +123_000.000_400E-10_10; 1`] = `

  1 | +123_000.000_400E-10_10;

`;

exports[`no-zero-fractions > invalid(160): +123_000.000_400E-10_10; 2`] = `

Message:
> 1 | +123_000.000_400E-10_10;
    |               ^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000.000_4E-10_10;

`;

exports[`no-zero-fractions > invalid(161): -123_000.000_400E-10_10; 1`] = `

  1 | -123_000.000_400E-10_10;

`;

exports[`no-zero-fractions > invalid(161): -123_000.000_400E-10_10; 2`] = `

Message:
> 1 | -123_000.000_400E-10_10;
    |               ^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000.000_4E-10_10;

`;

exports[`no-zero-fractions > invalid(162): 1.00.toFixed(2) 1`] = `

  1 | 1.00.toFixed(2)

`;

exports[`no-zero-fractions > invalid(162): 1.00.toFixed(2) 2`] = `

Message:
> 1 | 1.00.toFixed(2)
    |  ^^^ Don't use a zero fraction in the number.

Output:
  1 | (1).toFixed(2)

`;

exports[`no-zero-fractions > invalid(163): 1.00 .toFixed(2) 1`] = `

  1 | 1.00 .toFixed(2)

`;

exports[`no-zero-fractions > invalid(163): 1.00 .toFixed(2) 2`] = `

Message:
> 1 | 1.00 .toFixed(2)
    |  ^^^ Don't use a zero fraction in the number.

Output:
  1 | (1) .toFixed(2)

`;

exports[`no-zero-fractions > invalid(164): (1.00).toFixed(2) 1`] = `

  1 | (1.00).toFixed(2)

`;

exports[`no-zero-fractions > invalid(164): (1.00).toFixed(2) 2`] = `

Message:
> 1 | (1.00).toFixed(2)
    |   ^^^ Don't use a zero fraction in the number.

Output:
  1 | (1).toFixed(2)

`;

exports[`no-zero-fractions > invalid(165): 1.00?.toFixed(2) 1`] = `

  1 | 1.00?.toFixed(2)

`;

exports[`no-zero-fractions > invalid(165): 1.00?.toFixed(2) 2`] = `

Message:
> 1 | 1.00?.toFixed(2)
    |  ^^^ Don't use a zero fraction in the number.

Output:
  1 | (1)?.toFixed(2)

`;

exports[`no-zero-fractions > invalid(166): console.log()\n1..toString() 1`] = `

  1 | console.log()
  2 | 1..toString()

`;

exports[`no-zero-fractions > invalid(166): console.log()\n1..toString() 2`] = `

Message:
  1 | console.log()
> 2 | 1..toString()
    |  ^ Don't use a dangling dot in the number.

Output:
  1 | console.log()
  2 | ;(1).toString()

`;

exports[`no-zero-fractions > invalid(167): console.log()\na[1.].toString() 1`] = `

  1 | console.log()
  2 | a[1.].toString()

`;

exports[`no-zero-fractions > invalid(167): console.log()\na[1.].toString() 2`] = `

Message:
  1 | console.log()
> 2 | a[1.].toString()
    |    ^ Don't use a dangling dot in the number.

Output:
  1 | console.log()
  2 | a[1].toString()

`;

exports[`no-zero-fractions > invalid(168): console.log()\n1.00e10.toString() 1`] = `

  1 | console.log()
  2 | 1.00e10.toString()

`;

exports[`no-zero-fractions > invalid(168): console.log()\n1.00e10.toString() 2`] = `

Message:
  1 | console.log()
> 2 | 1.00e10.toString()
    |  ^^^ Don't use a zero fraction in the number.

Output:
  1 | console.log()
  2 | 1e10.toString()

`;

exports[`no-zero-fractions > invalid(169): console.log()\na[1.00e10].toString() 1`] = `

  1 | console.log()
  2 | a[1.00e10].toString()

`;

exports[`no-zero-fractions > invalid(169): console.log()\na[1.00e10].toString() 2`] = `

Message:
  1 | console.log()
> 2 | a[1.00e10].toString()
    |    ^^^ Don't use a zero fraction in the number.

Output:
  1 | console.log()
  2 | a[1e10].toString()

`;

exports[`no-zero-fractions > invalid(17): const foo = (1.).toString() 1`] = `

  1 | const foo = (1.).toString()

`;

exports[`no-zero-fractions > invalid(17): const foo = (1.).toString() 2`] = `

Message:
> 1 | const foo = (1.).toString()
    |               ^ Don't use a dangling dot in the number.

Output:
  1 | const foo = (1).toString()

`;

exports[`no-zero-fractions > invalid(170): a = .0; 1`] = `

  1 | a = .0;

`;

exports[`no-zero-fractions > invalid(170): a = .0; 2`] = `

Message:
> 1 | a = .0;
    |      ^ Don't use a zero fraction in the number.

Output:
  1 | a = 0;

`;

exports[`no-zero-fractions > invalid(171): a = .0.toString() 1`] = `

  1 | a = .0.toString()

`;

exports[`no-zero-fractions > invalid(171): a = .0.toString() 2`] = `

Message:
> 1 | a = .0.toString()
    |      ^ Don't use a zero fraction in the number.

Output:
  1 | a = (0).toString()

`;

exports[`no-zero-fractions > invalid(172): function foo(){return.0} 1`] = `

  1 | function foo(){return.0}

`;

exports[`no-zero-fractions > invalid(172): function foo(){return.0} 2`] = `

Message:
> 1 | function foo(){return.0}
    |                       ^ Don't use a zero fraction in the number.

Output:
  1 | function foo(){return 0}

`;

exports[`no-zero-fractions > invalid(173): function foo(){return.0.toString()} 1`] = `

  1 | function foo(){return.0.toString()}

`;

exports[`no-zero-fractions > invalid(173): function foo(){return.0.toString()} 2`] = `

Message:
> 1 | function foo(){return.0.toString()}
    |                       ^ Don't use a zero fraction in the number.

Output:
  1 | function foo(){return (0).toString()}

`;

exports[`no-zero-fractions > invalid(174): function foo(){return.0+.1} 1`] = `

  1 | function foo(){return.0+.1}

`;

exports[`no-zero-fractions > invalid(174): function foo(){return.0+.1} 2`] = `

Message:
> 1 | function foo(){return.0+.1}
    |                       ^ Don't use a zero fraction in the number.

Output:
  1 | function foo(){return 0+.1}

`;

exports[`no-zero-fractions > invalid(174): function foo(){return.0+.1} 3`] = `

Message:
> 1 | function foo(){return.0+.1}
    |                         ^^ Use a leading zero before the decimal point.

Output:
  1 | function foo(){return.0+0.1}

`;

exports[`no-zero-fractions > invalid(175): console.log()\n.0.toString() 1`] = `

  1 | console.log()
  2 | .0.toString()

`;

exports[`no-zero-fractions > invalid(175): console.log()\n.0.toString() 2`] = `

Message:
  1 | console.log()
> 2 | .0.toString()
    |  ^ Don't use a zero fraction in the number.

Output:
  1 | console.log()
  2 | ;(0).toString()

`;

exports[`no-zero-fractions > invalid(18): +123_000.; 1`] = `

  1 | +123_000.;

`;

exports[`no-zero-fractions > invalid(18): +123_000.; 2`] = `

Message:
> 1 | +123_000.;
    |         ^ Don't use a dangling dot in the number.

Output:
  1 | +123_000;

`;

exports[`no-zero-fractions > invalid(19): -123_000.; 1`] = `

  1 | -123_000.;

`;

exports[`no-zero-fractions > invalid(19): -123_000.; 2`] = `

Message:
> 1 | -123_000.;
    |         ^ Don't use a dangling dot in the number.

Output:
  1 | -123_000;

`;

exports[`no-zero-fractions > invalid(2): [1.0, -1.00, 1.50, 1.00e2] 1`] = `

  1 | [1.0, -1.00, 1.50, 1.00e2]

`;

exports[`no-zero-fractions > invalid(2): [1.0, -1.00, 1.50, 1.00e2] 2`] = `

Message:
> 1 | [1.0, -1.00, 1.50, 1.00e2]
    |   ^^ Don't use a zero fraction in the number.

Output:
  1 | [1, -1.00, 1.50, 1.00e2]

`;

exports[`no-zero-fractions > invalid(2): [1.0, -1.00, 1.50, 1.00e2] 3`] = `

Message:
> 1 | [1.0, -1.00, 1.50, 1.00e2]
    |         ^^^ Don't use a zero fraction in the number.

Output:
  1 | [1.0, -1, 1.50, 1.00e2]

`;

exports[`no-zero-fractions > invalid(2): [1.0, -1.00, 1.50, 1.00e2] 4`] = `

Message:
> 1 | [1.0, -1.00, 1.50, 1.00e2]
    |                 ^ Don't use a zero fraction in the number.

Output:
  1 | [1.0, -1.00, 1.5, 1.00e2]

`;

exports[`no-zero-fractions > invalid(2): [1.0, -1.00, 1.50, 1.00e2] 5`] = `

Message:
> 1 | [1.0, -1.00, 1.50, 1.00e2]
    |                     ^^^ Don't use a zero fraction in the number.

Output:
  1 | [1.0, -1.00, 1.50, 1e2]

`;

exports[`no-zero-fractions > invalid(2): a { --number: +.50; --size: 2.00\\70x; --exponent: 1.00E2; } 1`] = `

  1 | a { --number: +.50; --size: 2.00\\70x; --exponent: 1.00E2; }

`;

exports[`no-zero-fractions > invalid(2): a { --number: +.50; --size: 2.00\\70x; --exponent: 1.00E2; } 2`] = `

Message:
> 1 | a { --number: +.50; --size: 2.00\\70x; --exponent: 1.00E2; }
    |                ^^^ Use a leading zero before the decimal point.

Output:
  1 | a { --number: +0.5; --size: 2.00\\70x; --exponent: 1.00E2; }

`;

exports[`no-zero-fractions > invalid(2): a { --number: +.50; --size: 2.00\\70x; --exponent: 1.00E2; } 3`] = `

Message:
> 1 | a { --number: +.50; --size: 2.00\\70x; --exponent: 1.00E2; }
    |                              ^^^ Don't use a zero fraction in the number.

Output:
  1 | a { --number: +.50; --size: 2\\70x; --exponent: 1.00E2; }

`;

exports[`no-zero-fractions > invalid(2): a { --number: +.50; --size: 2.00\\70x; --exponent: 1.00E2; } 4`] = `

Message:
> 1 | a { --number: +.50; --size: 2.00\\70x; --exponent: 1.00E2; }
    |                                                    ^^^ Don't use a zero fraction in the number.

Output:
  1 | a { --number: +.50; --size: 2.00\\70x; --exponent: 1E2; }

`;

exports[`no-zero-fractions > invalid(2): const foo = 1.0 + 1 1`] = `

  1 | const foo = 1.0 + 1

`;

exports[`no-zero-fractions > invalid(2): const foo = 1.0 + 1 2`] = `

Message:
> 1 | const foo = 1.0 + 1
    |              ^^ Don't use a zero fraction in the number.

Output:
  1 | const foo = 1 + 1

`;

exports[`no-zero-fractions > invalid(2): const value = -.50; 1`] = `

  1 | const value = -.50;

`;

exports[`no-zero-fractions > invalid(2): const value = -.50; 2`] = `

Message:
> 1 | const value = -.50;
    |                ^^^ Use a leading zero before the decimal point.

Output:
  1 | const value = -0.5;

`;

exports[`no-zero-fractions > invalid(2): value: &number 1.00 1`] = `

  1 | value: &number 1.00

`;

exports[`no-zero-fractions > invalid(2): value: &number 1.00 2`] = `

Message:
> 1 | value: &number 1.00
    |                   ^ Don't use a zero fraction in the number.

Output:
  1 | value: &number 1.0

`;

exports[`no-zero-fractions > invalid(20): +123_000.e1; 1`] = `

  1 | +123_000.e1;

`;

exports[`no-zero-fractions > invalid(20): +123_000.e1; 2`] = `

Message:
> 1 | +123_000.e1;
    |         ^ Don't use a dangling dot in the number.

Output:
  1 | +123_000e1;

`;

exports[`no-zero-fractions > invalid(21): -123_000.e1; 1`] = `

  1 | -123_000.e1;

`;

exports[`no-zero-fractions > invalid(21): -123_000.e1; 2`] = `

Message:
> 1 | -123_000.e1;
    |         ^ Don't use a dangling dot in the number.

Output:
  1 | -123_000e1;

`;

exports[`no-zero-fractions > invalid(22): +123_000.e+1; 1`] = `

  1 | +123_000.e+1;

`;

exports[`no-zero-fractions > invalid(22): +123_000.e+1; 2`] = `

Message:
> 1 | +123_000.e+1;
    |         ^ Don't use a dangling dot in the number.

Output:
  1 | +123_000e+1;

`;

exports[`no-zero-fractions > invalid(23): -123_000.e+1; 1`] = `

  1 | -123_000.e+1;

`;

exports[`no-zero-fractions > invalid(23): -123_000.e+1; 2`] = `

Message:
> 1 | -123_000.e+1;
    |         ^ Don't use a dangling dot in the number.

Output:
  1 | -123_000e+1;

`;

exports[`no-zero-fractions > invalid(24): +123_000.e-1; 1`] = `

  1 | +123_000.e-1;

`;

exports[`no-zero-fractions > invalid(24): +123_000.e-1; 2`] = `

Message:
> 1 | +123_000.e-1;
    |         ^ Don't use a dangling dot in the number.

Output:
  1 | +123_000e-1;

`;

exports[`no-zero-fractions > invalid(25): -123_000.e-1; 1`] = `

  1 | -123_000.e-1;

`;

exports[`no-zero-fractions > invalid(25): -123_000.e-1; 2`] = `

Message:
> 1 | -123_000.e-1;
    |         ^ Don't use a dangling dot in the number.

Output:
  1 | -123_000e-1;

`;

exports[`no-zero-fractions > invalid(26): +123_000.e0; 1`] = `

  1 | +123_000.e0;

`;

exports[`no-zero-fractions > invalid(26): +123_000.e0; 2`] = `

Message:
> 1 | +123_000.e0;
    |         ^ Don't use a dangling dot in the number.

Output:
  1 | +123_000e0;

`;

exports[`no-zero-fractions > invalid(27): -123_000.e0; 1`] = `

  1 | -123_000.e0;

`;

exports[`no-zero-fractions > invalid(27): -123_000.e0; 2`] = `

Message:
> 1 | -123_000.e0;
    |         ^ Don't use a dangling dot in the number.

Output:
  1 | -123_000e0;

`;

exports[`no-zero-fractions > invalid(28): +123_000.e+0; 1`] = `

  1 | +123_000.e+0;

`;

exports[`no-zero-fractions > invalid(28): +123_000.e+0; 2`] = `

Message:
> 1 | +123_000.e+0;
    |         ^ Don't use a dangling dot in the number.

Output:
  1 | +123_000e+0;

`;

exports[`no-zero-fractions > invalid(29): -123_000.e+0; 1`] = `

  1 | -123_000.e+0;

`;

exports[`no-zero-fractions > invalid(29): -123_000.e+0; 2`] = `

Message:
> 1 | -123_000.e+0;
    |         ^ Don't use a dangling dot in the number.

Output:
  1 | -123_000e+0;

`;

exports[`no-zero-fractions > invalid(3): %YAML 1.1\n---\nvalue: [1.00e+2, 1.50, .50] 1`] = `

  1 | %YAML 1.1
  2 | ---
  3 | value: [1.00e+2, 1.50, .50]

`;

exports[`no-zero-fractions > invalid(3): %YAML 1.1\n---\nvalue: [1.00e+2, 1.50, .50] 2`] = `

Message:
  1 | %YAML 1.1
  2 | ---
> 3 | value: [1.00e+2, 1.50, .50]
    |            ^ Don't use a zero fraction in the number.

Output:
  1 | %YAML 1.1
  2 | ---
  3 | value: [1.0e+2, 1.50, .50]

`;

exports[`no-zero-fractions > invalid(3): %YAML 1.1\n---\nvalue: [1.00e+2, 1.50, .50] 3`] = `

Message:
  1 | %YAML 1.1
  2 | ---
> 3 | value: [1.00e+2, 1.50, .50]
    |                     ^ Don't use a zero fraction in the number.

Output:
  1 | %YAML 1.1
  2 | ---
  3 | value: [1.00e+2, 1.5, .50]

`;

exports[`no-zero-fractions > invalid(3): %YAML 1.1\n---\nvalue: [1.00e+2, 1.50, .50] 4`] = `

Message:
  1 | %YAML 1.1
  2 | ---
> 3 | value: [1.00e+2, 1.50, .50]
    |                        ^^^ Use a leading zero before the decimal point.

Output:
  1 | %YAML 1.1
  2 | ---
  3 | value: [1.00e+2, 1.50, 0.5]

`;

exports[`no-zero-fractions > invalid(3): @media (width > 1.0px) { a { width: calc(.50px + 1.0px) } } 1`] = `

  1 | @media (width > 1.0px) { a { width: calc(.50px + 1.0px) } }

`;

exports[`no-zero-fractions > invalid(3): @media (width > 1.0px) { a { width: calc(.50px + 1.0px) } } 2`] = `

Message:
> 1 | @media (width > 1.0px) { a { width: calc(.50px + 1.0px) } }
    |                  ^^ Don't use a zero fraction in the number.

Output:
  1 | @media (width > 1px) { a { width: calc(.50px + 1.0px) } }

`;

exports[`no-zero-fractions > invalid(3): @media (width > 1.0px) { a { width: calc(.50px + 1.0px) } } 3`] = `

Message:
> 1 | @media (width > 1.0px) { a { width: calc(.50px + 1.0px) } }
    |                                          ^^^ Use a leading zero before the decimal point.

Output:
  1 | @media (width > 1.0px) { a { width: calc(0.5px + 1.0px) } }

`;

exports[`no-zero-fractions > invalid(3): @media (width > 1.0px) { a { width: calc(.50px + 1.0px) } } 4`] = `

Message:
> 1 | @media (width > 1.0px) { a { width: calc(.50px + 1.0px) } }
    |                                                   ^^ Don't use a zero fraction in the number.

Output:
  1 | @media (width > 1.0px) { a { width: calc(.50px + 1px) } }

`;

exports[`no-zero-fractions > invalid(3): [1.0, -1.00, 1.50, 1.00e2] 1`] = `

  1 | [1.0, -1.00, 1.50, 1.00e2]

`;

exports[`no-zero-fractions > invalid(3): [1.0, -1.00, 1.50, 1.00e2] 2`] = `

Message:
> 1 | [1.0, -1.00, 1.50, 1.00e2]
    |   ^^ Don't use a zero fraction in the number.

Output:
  1 | [1, -1.00, 1.50, 1.00e2]

`;

exports[`no-zero-fractions > invalid(3): [1.0, -1.00, 1.50, 1.00e2] 3`] = `

Message:
> 1 | [1.0, -1.00, 1.50, 1.00e2]
    |         ^^^ Don't use a zero fraction in the number.

Output:
  1 | [1.0, -1, 1.50, 1.00e2]

`;

exports[`no-zero-fractions > invalid(3): [1.0, -1.00, 1.50, 1.00e2] 4`] = `

Message:
> 1 | [1.0, -1.00, 1.50, 1.00e2]
    |                 ^ Don't use a zero fraction in the number.

Output:
  1 | [1.0, -1.00, 1.5, 1.00e2]

`;

exports[`no-zero-fractions > invalid(3): [1.0, -1.00, 1.50, 1.00e2] 5`] = `

Message:
> 1 | [1.0, -1.00, 1.50, 1.00e2]
    |                     ^^^ Don't use a zero fraction in the number.

Output:
  1 | [1.0, -1.00, 1.50, 1e2]

`;

exports[`no-zero-fractions > invalid(3): foo(1.0 + 1) 1`] = `

  1 | foo(1.0 + 1)

`;

exports[`no-zero-fractions > invalid(3): foo(1.0 + 1) 2`] = `

Message:
> 1 | foo(1.0 + 1)
    |      ^^ Don't use a zero fraction in the number.

Output:
  1 | foo(1 + 1)

`;

exports[`no-zero-fractions > invalid(3): function foo() {return.5} 1`] = `

  1 | function foo() {return.5}

`;

exports[`no-zero-fractions > invalid(3): function foo() {return.5} 2`] = `

Message:
> 1 | function foo() {return.5}
    |                       ^^ Use a leading zero before the decimal point.

Output:
  1 | function foo() {return 0.5}

`;

exports[`no-zero-fractions > invalid(30): +123_000.e-0; 1`] = `

  1 | +123_000.e-0;

`;

exports[`no-zero-fractions > invalid(30): +123_000.e-0; 2`] = `

Message:
> 1 | +123_000.e-0;
    |         ^ Don't use a dangling dot in the number.

Output:
  1 | +123_000e-0;

`;

exports[`no-zero-fractions > invalid(31): -123_000.e-0; 1`] = `

  1 | -123_000.e-0;

`;

exports[`no-zero-fractions > invalid(31): -123_000.e-0; 2`] = `

Message:
> 1 | -123_000.e-0;
    |         ^ Don't use a dangling dot in the number.

Output:
  1 | -123_000e-0;

`;

exports[`no-zero-fractions > invalid(32): +123_000.e10; 1`] = `

  1 | +123_000.e10;

`;

exports[`no-zero-fractions > invalid(32): +123_000.e10; 2`] = `

Message:
> 1 | +123_000.e10;
    |         ^ Don't use a dangling dot in the number.

Output:
  1 | +123_000e10;

`;

exports[`no-zero-fractions > invalid(33): -123_000.e10; 1`] = `

  1 | -123_000.e10;

`;

exports[`no-zero-fractions > invalid(33): -123_000.e10; 2`] = `

Message:
> 1 | -123_000.e10;
    |         ^ Don't use a dangling dot in the number.

Output:
  1 | -123_000e10;

`;

exports[`no-zero-fractions > invalid(34): +123_000.e+10; 1`] = `

  1 | +123_000.e+10;

`;

exports[`no-zero-fractions > invalid(34): +123_000.e+10; 2`] = `

Message:
> 1 | +123_000.e+10;
    |         ^ Don't use a dangling dot in the number.

Output:
  1 | +123_000e+10;

`;

exports[`no-zero-fractions > invalid(35): -123_000.e+10; 1`] = `

  1 | -123_000.e+10;

`;

exports[`no-zero-fractions > invalid(35): -123_000.e+10; 2`] = `

Message:
> 1 | -123_000.e+10;
    |         ^ Don't use a dangling dot in the number.

Output:
  1 | -123_000e+10;

`;

exports[`no-zero-fractions > invalid(36): +123_000.e-10; 1`] = `

  1 | +123_000.e-10;

`;

exports[`no-zero-fractions > invalid(36): +123_000.e-10; 2`] = `

Message:
> 1 | +123_000.e-10;
    |         ^ Don't use a dangling dot in the number.

Output:
  1 | +123_000e-10;

`;

exports[`no-zero-fractions > invalid(37): -123_000.e-10; 1`] = `

  1 | -123_000.e-10;

`;

exports[`no-zero-fractions > invalid(37): -123_000.e-10; 2`] = `

Message:
> 1 | -123_000.e-10;
    |         ^ Don't use a dangling dot in the number.

Output:
  1 | -123_000e-10;

`;

exports[`no-zero-fractions > invalid(38): +123_000.E-10; 1`] = `

  1 | +123_000.E-10;

`;

exports[`no-zero-fractions > invalid(38): +123_000.E-10; 2`] = `

Message:
> 1 | +123_000.E-10;
    |         ^ Don't use a dangling dot in the number.

Output:
  1 | +123_000E-10;

`;

exports[`no-zero-fractions > invalid(39): -123_000.E-10; 1`] = `

  1 | -123_000.E-10;

`;

exports[`no-zero-fractions > invalid(39): -123_000.E-10; 2`] = `

Message:
> 1 | -123_000.E-10;
    |         ^ Don't use a dangling dot in the number.

Output:
  1 | -123_000E-10;

`;

exports[`no-zero-fractions > invalid(4): .5.toString() 1`] = `

  1 | .5.toString()

`;

exports[`no-zero-fractions > invalid(4): .5.toString() 2`] = `

Message:
> 1 | .5.toString()
    | ^^ Use a leading zero before the decimal point.

Output:
  1 | 0.5.toString()

`;

exports[`no-zero-fractions > invalid(4): a { aspect-ratio: 1.0/2.0; width: calc(1.0px*2.0); height: calc(1.0px/2.0); } 1`] = `

  1 | a { aspect-ratio: 1.0/2.0; width: calc(1.0px*2.0); height: calc(1.0px/2.0); }

`;

exports[`no-zero-fractions > invalid(4): a { aspect-ratio: 1.0/2.0; width: calc(1.0px*2.0); height: calc(1.0px/2.0); } 2`] = `

Message:
> 1 | a { aspect-ratio: 1.0/2.0; width: calc(1.0px*2.0); height: calc(1.0px/2.0); }
    |                    ^^ Don't use a zero fraction in the number.

Output:
  1 | a { aspect-ratio: 1/2.0; width: calc(1.0px*2.0); height: calc(1.0px/2.0); }

`;

exports[`no-zero-fractions > invalid(4): a { aspect-ratio: 1.0/2.0; width: calc(1.0px*2.0); height: calc(1.0px/2.0); } 3`] = `

Message:
> 1 | a { aspect-ratio: 1.0/2.0; width: calc(1.0px*2.0); height: calc(1.0px/2.0); }
    |                        ^^ Don't use a zero fraction in the number.

Output:
  1 | a { aspect-ratio: 1.0/2; width: calc(1.0px*2.0); height: calc(1.0px/2.0); }

`;

exports[`no-zero-fractions > invalid(4): a { aspect-ratio: 1.0/2.0; width: calc(1.0px*2.0); height: calc(1.0px/2.0); } 4`] = `

Message:
> 1 | a { aspect-ratio: 1.0/2.0; width: calc(1.0px*2.0); height: calc(1.0px/2.0); }
    |                                         ^^ Don't use a zero fraction in the number.

Output:
  1 | a { aspect-ratio: 1.0/2.0; width: calc(1px*2.0); height: calc(1.0px/2.0); }

`;

exports[`no-zero-fractions > invalid(4): a { aspect-ratio: 1.0/2.0; width: calc(1.0px*2.0); height: calc(1.0px/2.0); } 5`] = `

Message:
> 1 | a { aspect-ratio: 1.0/2.0; width: calc(1.0px*2.0); height: calc(1.0px/2.0); }
    |                                               ^^ Don't use a zero fraction in the number.

Output:
  1 | a { aspect-ratio: 1.0/2.0; width: calc(1.0px*2); height: calc(1.0px/2.0); }

`;

exports[`no-zero-fractions > invalid(4): a { aspect-ratio: 1.0/2.0; width: calc(1.0px*2.0); height: calc(1.0px/2.0); } 6`] = `

Message:
> 1 | a { aspect-ratio: 1.0/2.0; width: calc(1.0px*2.0); height: calc(1.0px/2.0); }
    |                                                                  ^^ Don't use a zero fraction in the number.

Output:
  1 | a { aspect-ratio: 1.0/2.0; width: calc(1.0px*2.0); height: calc(1px/2.0); }

`;

exports[`no-zero-fractions > invalid(4): a { aspect-ratio: 1.0/2.0; width: calc(1.0px*2.0); height: calc(1.0px/2.0); } 7`] = `

Message:
> 1 | a { aspect-ratio: 1.0/2.0; width: calc(1.0px*2.0); height: calc(1.0px/2.0); }
    |                                                                        ^^ Don't use a zero fraction in the number.

Output:
  1 | a { aspect-ratio: 1.0/2.0; width: calc(1.0px*2.0); height: calc(1.0px/2); }

`;

exports[`no-zero-fractions > invalid(4): const foo = 1.00 1`] = `

  1 | const foo = 1.00

`;

exports[`no-zero-fractions > invalid(4): const foo = 1.00 2`] = `

Message:
> 1 | const foo = 1.00
    |              ^^^ Don't use a zero fraction in the number.

Output:
  1 | const foo = 1

`;

exports[`no-zero-fractions > invalid(40): +123_000.E-10_10; 1`] = `

  1 | +123_000.E-10_10;

`;

exports[`no-zero-fractions > invalid(40): +123_000.E-10_10; 2`] = `

Message:
> 1 | +123_000.E-10_10;
    |         ^ Don't use a dangling dot in the number.

Output:
  1 | +123_000E-10_10;

`;

exports[`no-zero-fractions > invalid(41): -123_000.E-10_10; 1`] = `

  1 | -123_000.E-10_10;

`;

exports[`no-zero-fractions > invalid(41): -123_000.E-10_10; 2`] = `

Message:
> 1 | -123_000.E-10_10;
    |         ^ Don't use a dangling dot in the number.

Output:
  1 | -123_000E-10_10;

`;

exports[`no-zero-fractions > invalid(42): +123_000.0; 1`] = `

  1 | +123_000.0;

`;

exports[`no-zero-fractions > invalid(42): +123_000.0; 2`] = `

Message:
> 1 | +123_000.0;
    |         ^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000;

`;

exports[`no-zero-fractions > invalid(43): -123_000.0; 1`] = `

  1 | -123_000.0;

`;

exports[`no-zero-fractions > invalid(43): -123_000.0; 2`] = `

Message:
> 1 | -123_000.0;
    |         ^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000;

`;

exports[`no-zero-fractions > invalid(44): +123_000.0e1; 1`] = `

  1 | +123_000.0e1;

`;

exports[`no-zero-fractions > invalid(44): +123_000.0e1; 2`] = `

Message:
> 1 | +123_000.0e1;
    |         ^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000e1;

`;

exports[`no-zero-fractions > invalid(45): -123_000.0e1; 1`] = `

  1 | -123_000.0e1;

`;

exports[`no-zero-fractions > invalid(45): -123_000.0e1; 2`] = `

Message:
> 1 | -123_000.0e1;
    |         ^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000e1;

`;

exports[`no-zero-fractions > invalid(46): +123_000.0e+1; 1`] = `

  1 | +123_000.0e+1;

`;

exports[`no-zero-fractions > invalid(46): +123_000.0e+1; 2`] = `

Message:
> 1 | +123_000.0e+1;
    |         ^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000e+1;

`;

exports[`no-zero-fractions > invalid(47): -123_000.0e+1; 1`] = `

  1 | -123_000.0e+1;

`;

exports[`no-zero-fractions > invalid(47): -123_000.0e+1; 2`] = `

Message:
> 1 | -123_000.0e+1;
    |         ^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000e+1;

`;

exports[`no-zero-fractions > invalid(48): +123_000.0e-1; 1`] = `

  1 | +123_000.0e-1;

`;

exports[`no-zero-fractions > invalid(48): +123_000.0e-1; 2`] = `

Message:
> 1 | +123_000.0e-1;
    |         ^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000e-1;

`;

exports[`no-zero-fractions > invalid(49): -123_000.0e-1; 1`] = `

  1 | -123_000.0e-1;

`;

exports[`no-zero-fractions > invalid(49): -123_000.0e-1; 2`] = `

Message:
> 1 | -123_000.0e-1;
    |         ^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000e-1;

`;

exports[`no-zero-fractions > invalid(5): const foo = 1.00000 1`] = `

  1 | const foo = 1.00000

`;

exports[`no-zero-fractions > invalid(5): const foo = 1.00000 2`] = `

Message:
> 1 | const foo = 1.00000
    |              ^^^^^^ Don't use a zero fraction in the number.

Output:
  1 | const foo = 1

`;

exports[`no-zero-fractions > invalid(5): const value = .50e2; 1`] = `

  1 | const value = .50e2;

`;

exports[`no-zero-fractions > invalid(5): const value = .50e2; 2`] = `

Message:
> 1 | const value = .50e2;
    |               ^^^ Use a leading zero before the decimal point.

Output:
  1 | const value = 0.5e2;

`;

exports[`no-zero-fractions > invalid(50): +123_000.0e0; 1`] = `

  1 | +123_000.0e0;

`;

exports[`no-zero-fractions > invalid(50): +123_000.0e0; 2`] = `

Message:
> 1 | +123_000.0e0;
    |         ^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000e0;

`;

exports[`no-zero-fractions > invalid(51): -123_000.0e0; 1`] = `

  1 | -123_000.0e0;

`;

exports[`no-zero-fractions > invalid(51): -123_000.0e0; 2`] = `

Message:
> 1 | -123_000.0e0;
    |         ^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000e0;

`;

exports[`no-zero-fractions > invalid(52): +123_000.0e+0; 1`] = `

  1 | +123_000.0e+0;

`;

exports[`no-zero-fractions > invalid(52): +123_000.0e+0; 2`] = `

Message:
> 1 | +123_000.0e+0;
    |         ^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000e+0;

`;

exports[`no-zero-fractions > invalid(53): -123_000.0e+0; 1`] = `

  1 | -123_000.0e+0;

`;

exports[`no-zero-fractions > invalid(53): -123_000.0e+0; 2`] = `

Message:
> 1 | -123_000.0e+0;
    |         ^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000e+0;

`;

exports[`no-zero-fractions > invalid(54): +123_000.0e-0; 1`] = `

  1 | +123_000.0e-0;

`;

exports[`no-zero-fractions > invalid(54): +123_000.0e-0; 2`] = `

Message:
> 1 | +123_000.0e-0;
    |         ^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000e-0;

`;

exports[`no-zero-fractions > invalid(55): -123_000.0e-0; 1`] = `

  1 | -123_000.0e-0;

`;

exports[`no-zero-fractions > invalid(55): -123_000.0e-0; 2`] = `

Message:
> 1 | -123_000.0e-0;
    |         ^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000e-0;

`;

exports[`no-zero-fractions > invalid(56): +123_000.0e10; 1`] = `

  1 | +123_000.0e10;

`;

exports[`no-zero-fractions > invalid(56): +123_000.0e10; 2`] = `

Message:
> 1 | +123_000.0e10;
    |         ^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000e10;

`;

exports[`no-zero-fractions > invalid(57): -123_000.0e10; 1`] = `

  1 | -123_000.0e10;

`;

exports[`no-zero-fractions > invalid(57): -123_000.0e10; 2`] = `

Message:
> 1 | -123_000.0e10;
    |         ^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000e10;

`;

exports[`no-zero-fractions > invalid(58): +123_000.0e+10; 1`] = `

  1 | +123_000.0e+10;

`;

exports[`no-zero-fractions > invalid(58): +123_000.0e+10; 2`] = `

Message:
> 1 | +123_000.0e+10;
    |         ^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000e+10;

`;

exports[`no-zero-fractions > invalid(59): -123_000.0e+10; 1`] = `

  1 | -123_000.0e+10;

`;

exports[`no-zero-fractions > invalid(59): -123_000.0e+10; 2`] = `

Message:
> 1 | -123_000.0e+10;
    |         ^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000e+10;

`;

exports[`no-zero-fractions > invalid(6): const foo = 1.10 1`] = `

  1 | const foo = 1.10

`;

exports[`no-zero-fractions > invalid(6): const foo = 1.10 2`] = `

Message:
> 1 | const foo = 1.10
    |                ^ Don't use a zero fraction in the number.

Output:
  1 | const foo = 1.1

`;

exports[`no-zero-fractions > invalid(60): +123_000.0e-10; 1`] = `

  1 | +123_000.0e-10;

`;

exports[`no-zero-fractions > invalid(60): +123_000.0e-10; 2`] = `

Message:
> 1 | +123_000.0e-10;
    |         ^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000e-10;

`;

exports[`no-zero-fractions > invalid(61): -123_000.0e-10; 1`] = `

  1 | -123_000.0e-10;

`;

exports[`no-zero-fractions > invalid(61): -123_000.0e-10; 2`] = `

Message:
> 1 | -123_000.0e-10;
    |         ^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000e-10;

`;

exports[`no-zero-fractions > invalid(62): +123_000.0E-10; 1`] = `

  1 | +123_000.0E-10;

`;

exports[`no-zero-fractions > invalid(62): +123_000.0E-10; 2`] = `

Message:
> 1 | +123_000.0E-10;
    |         ^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000E-10;

`;

exports[`no-zero-fractions > invalid(63): -123_000.0E-10; 1`] = `

  1 | -123_000.0E-10;

`;

exports[`no-zero-fractions > invalid(63): -123_000.0E-10; 2`] = `

Message:
> 1 | -123_000.0E-10;
    |         ^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000E-10;

`;

exports[`no-zero-fractions > invalid(64): +123_000.0E-10_10; 1`] = `

  1 | +123_000.0E-10_10;

`;

exports[`no-zero-fractions > invalid(64): +123_000.0E-10_10; 2`] = `

Message:
> 1 | +123_000.0E-10_10;
    |         ^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000E-10_10;

`;

exports[`no-zero-fractions > invalid(65): -123_000.0E-10_10; 1`] = `

  1 | -123_000.0E-10_10;

`;

exports[`no-zero-fractions > invalid(65): -123_000.0E-10_10; 2`] = `

Message:
> 1 | -123_000.0E-10_10;
    |         ^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000E-10_10;

`;

exports[`no-zero-fractions > invalid(66): +123_000.000; 1`] = `

  1 | +123_000.000;

`;

exports[`no-zero-fractions > invalid(66): +123_000.000; 2`] = `

Message:
> 1 | +123_000.000;
    |         ^^^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000;

`;

exports[`no-zero-fractions > invalid(67): -123_000.000; 1`] = `

  1 | -123_000.000;

`;

exports[`no-zero-fractions > invalid(67): -123_000.000; 2`] = `

Message:
> 1 | -123_000.000;
    |         ^^^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000;

`;

exports[`no-zero-fractions > invalid(68): +123_000.000e1; 1`] = `

  1 | +123_000.000e1;

`;

exports[`no-zero-fractions > invalid(68): +123_000.000e1; 2`] = `

Message:
> 1 | +123_000.000e1;
    |         ^^^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000e1;

`;

exports[`no-zero-fractions > invalid(69): -123_000.000e1; 1`] = `

  1 | -123_000.000e1;

`;

exports[`no-zero-fractions > invalid(69): -123_000.000e1; 2`] = `

Message:
> 1 | -123_000.000e1;
    |         ^^^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000e1;

`;

exports[`no-zero-fractions > invalid(7): const foo = -1.0 1`] = `

  1 | const foo = -1.0

`;

exports[`no-zero-fractions > invalid(7): const foo = -1.0 2`] = `

Message:
> 1 | const foo = -1.0
    |               ^^ Don't use a zero fraction in the number.

Output:
  1 | const foo = -1

`;

exports[`no-zero-fractions > invalid(70): +123_000.000e+1; 1`] = `

  1 | +123_000.000e+1;

`;

exports[`no-zero-fractions > invalid(70): +123_000.000e+1; 2`] = `

Message:
> 1 | +123_000.000e+1;
    |         ^^^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000e+1;

`;

exports[`no-zero-fractions > invalid(71): -123_000.000e+1; 1`] = `

  1 | -123_000.000e+1;

`;

exports[`no-zero-fractions > invalid(71): -123_000.000e+1; 2`] = `

Message:
> 1 | -123_000.000e+1;
    |         ^^^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000e+1;

`;

exports[`no-zero-fractions > invalid(72): +123_000.000e-1; 1`] = `

  1 | +123_000.000e-1;

`;

exports[`no-zero-fractions > invalid(72): +123_000.000e-1; 2`] = `

Message:
> 1 | +123_000.000e-1;
    |         ^^^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000e-1;

`;

exports[`no-zero-fractions > invalid(73): -123_000.000e-1; 1`] = `

  1 | -123_000.000e-1;

`;

exports[`no-zero-fractions > invalid(73): -123_000.000e-1; 2`] = `

Message:
> 1 | -123_000.000e-1;
    |         ^^^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000e-1;

`;

exports[`no-zero-fractions > invalid(74): +123_000.000e0; 1`] = `

  1 | +123_000.000e0;

`;

exports[`no-zero-fractions > invalid(74): +123_000.000e0; 2`] = `

Message:
> 1 | +123_000.000e0;
    |         ^^^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000e0;

`;

exports[`no-zero-fractions > invalid(75): -123_000.000e0; 1`] = `

  1 | -123_000.000e0;

`;

exports[`no-zero-fractions > invalid(75): -123_000.000e0; 2`] = `

Message:
> 1 | -123_000.000e0;
    |         ^^^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000e0;

`;

exports[`no-zero-fractions > invalid(76): +123_000.000e+0; 1`] = `

  1 | +123_000.000e+0;

`;

exports[`no-zero-fractions > invalid(76): +123_000.000e+0; 2`] = `

Message:
> 1 | +123_000.000e+0;
    |         ^^^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000e+0;

`;

exports[`no-zero-fractions > invalid(77): -123_000.000e+0; 1`] = `

  1 | -123_000.000e+0;

`;

exports[`no-zero-fractions > invalid(77): -123_000.000e+0; 2`] = `

Message:
> 1 | -123_000.000e+0;
    |         ^^^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000e+0;

`;

exports[`no-zero-fractions > invalid(78): +123_000.000e-0; 1`] = `

  1 | +123_000.000e-0;

`;

exports[`no-zero-fractions > invalid(78): +123_000.000e-0; 2`] = `

Message:
> 1 | +123_000.000e-0;
    |         ^^^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000e-0;

`;

exports[`no-zero-fractions > invalid(79): -123_000.000e-0; 1`] = `

  1 | -123_000.000e-0;

`;

exports[`no-zero-fractions > invalid(79): -123_000.000e-0; 2`] = `

Message:
> 1 | -123_000.000e-0;
    |         ^^^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000e-0;

`;

exports[`no-zero-fractions > invalid(8): const foo = 123123123.0 1`] = `

  1 | const foo = 123123123.0

`;

exports[`no-zero-fractions > invalid(8): const foo = 123123123.0 2`] = `

Message:
> 1 | const foo = 123123123.0
    |                      ^^ Don't use a zero fraction in the number.

Output:
  1 | const foo = 123123123

`;

exports[`no-zero-fractions > invalid(80): +123_000.000e10; 1`] = `

  1 | +123_000.000e10;

`;

exports[`no-zero-fractions > invalid(80): +123_000.000e10; 2`] = `

Message:
> 1 | +123_000.000e10;
    |         ^^^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000e10;

`;

exports[`no-zero-fractions > invalid(81): -123_000.000e10; 1`] = `

  1 | -123_000.000e10;

`;

exports[`no-zero-fractions > invalid(81): -123_000.000e10; 2`] = `

Message:
> 1 | -123_000.000e10;
    |         ^^^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000e10;

`;

exports[`no-zero-fractions > invalid(82): +123_000.000e+10; 1`] = `

  1 | +123_000.000e+10;

`;

exports[`no-zero-fractions > invalid(82): +123_000.000e+10; 2`] = `

Message:
> 1 | +123_000.000e+10;
    |         ^^^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000e+10;

`;

exports[`no-zero-fractions > invalid(83): -123_000.000e+10; 1`] = `

  1 | -123_000.000e+10;

`;

exports[`no-zero-fractions > invalid(83): -123_000.000e+10; 2`] = `

Message:
> 1 | -123_000.000e+10;
    |         ^^^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000e+10;

`;

exports[`no-zero-fractions > invalid(84): +123_000.000e-10; 1`] = `

  1 | +123_000.000e-10;

`;

exports[`no-zero-fractions > invalid(84): +123_000.000e-10; 2`] = `

Message:
> 1 | +123_000.000e-10;
    |         ^^^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000e-10;

`;

exports[`no-zero-fractions > invalid(85): -123_000.000e-10; 1`] = `

  1 | -123_000.000e-10;

`;

exports[`no-zero-fractions > invalid(85): -123_000.000e-10; 2`] = `

Message:
> 1 | -123_000.000e-10;
    |         ^^^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000e-10;

`;

exports[`no-zero-fractions > invalid(86): +123_000.000E-10; 1`] = `

  1 | +123_000.000E-10;

`;

exports[`no-zero-fractions > invalid(86): +123_000.000E-10; 2`] = `

Message:
> 1 | +123_000.000E-10;
    |         ^^^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000E-10;

`;

exports[`no-zero-fractions > invalid(87): -123_000.000E-10; 1`] = `

  1 | -123_000.000E-10;

`;

exports[`no-zero-fractions > invalid(87): -123_000.000E-10; 2`] = `

Message:
> 1 | -123_000.000E-10;
    |         ^^^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000E-10;

`;

exports[`no-zero-fractions > invalid(88): +123_000.000E-10_10; 1`] = `

  1 | +123_000.000E-10_10;

`;

exports[`no-zero-fractions > invalid(88): +123_000.000E-10_10; 2`] = `

Message:
> 1 | +123_000.000E-10_10;
    |         ^^^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000E-10_10;

`;

exports[`no-zero-fractions > invalid(89): -123_000.000E-10_10; 1`] = `

  1 | -123_000.000E-10_10;

`;

exports[`no-zero-fractions > invalid(89): -123_000.000E-10_10; 2`] = `

Message:
> 1 | -123_000.000E-10_10;
    |         ^^^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000E-10_10;

`;

exports[`no-zero-fractions > invalid(9): const foo = 123.11100000000 1`] = `

  1 | const foo = 123.11100000000

`;

exports[`no-zero-fractions > invalid(9): const foo = 123.11100000000 2`] = `

Message:
> 1 | const foo = 123.11100000000
    |                    ^^^^^^^^ Don't use a zero fraction in the number.

Output:
  1 | const foo = 123.111

`;

exports[`no-zero-fractions > invalid(90): +123_000.000_000; 1`] = `

  1 | +123_000.000_000;

`;

exports[`no-zero-fractions > invalid(90): +123_000.000_000; 2`] = `

Message:
> 1 | +123_000.000_000;
    |         ^^^^^^^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000;

`;

exports[`no-zero-fractions > invalid(91): -123_000.000_000; 1`] = `

  1 | -123_000.000_000;

`;

exports[`no-zero-fractions > invalid(91): -123_000.000_000; 2`] = `

Message:
> 1 | -123_000.000_000;
    |         ^^^^^^^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000;

`;

exports[`no-zero-fractions > invalid(92): +123_000.000_000e1; 1`] = `

  1 | +123_000.000_000e1;

`;

exports[`no-zero-fractions > invalid(92): +123_000.000_000e1; 2`] = `

Message:
> 1 | +123_000.000_000e1;
    |         ^^^^^^^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000e1;

`;

exports[`no-zero-fractions > invalid(93): -123_000.000_000e1; 1`] = `

  1 | -123_000.000_000e1;

`;

exports[`no-zero-fractions > invalid(93): -123_000.000_000e1; 2`] = `

Message:
> 1 | -123_000.000_000e1;
    |         ^^^^^^^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000e1;

`;

exports[`no-zero-fractions > invalid(94): +123_000.000_000e+1; 1`] = `

  1 | +123_000.000_000e+1;

`;

exports[`no-zero-fractions > invalid(94): +123_000.000_000e+1; 2`] = `

Message:
> 1 | +123_000.000_000e+1;
    |         ^^^^^^^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000e+1;

`;

exports[`no-zero-fractions > invalid(95): -123_000.000_000e+1; 1`] = `

  1 | -123_000.000_000e+1;

`;

exports[`no-zero-fractions > invalid(95): -123_000.000_000e+1; 2`] = `

Message:
> 1 | -123_000.000_000e+1;
    |         ^^^^^^^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000e+1;

`;

exports[`no-zero-fractions > invalid(96): +123_000.000_000e-1; 1`] = `

  1 | +123_000.000_000e-1;

`;

exports[`no-zero-fractions > invalid(96): +123_000.000_000e-1; 2`] = `

Message:
> 1 | +123_000.000_000e-1;
    |         ^^^^^^^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000e-1;

`;

exports[`no-zero-fractions > invalid(97): -123_000.000_000e-1; 1`] = `

  1 | -123_000.000_000e-1;

`;

exports[`no-zero-fractions > invalid(97): -123_000.000_000e-1; 2`] = `

Message:
> 1 | -123_000.000_000e-1;
    |         ^^^^^^^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000e-1;

`;

exports[`no-zero-fractions > invalid(98): +123_000.000_000e0; 1`] = `

  1 | +123_000.000_000e0;

`;

exports[`no-zero-fractions > invalid(98): +123_000.000_000e0; 2`] = `

Message:
> 1 | +123_000.000_000e0;
    |         ^^^^^^^^ Don't use a zero fraction in the number.

Output:
  1 | +123_000e0;

`;

exports[`no-zero-fractions > invalid(99): -123_000.000_000e0; 1`] = `

  1 | -123_000.000_000e0;

`;

exports[`no-zero-fractions > invalid(99): -123_000.000_000e0; 2`] = `

Message:
> 1 | -123_000.000_000e0;
    |         ^^^^^^^^ Don't use a zero fraction in the number.

Output:
  1 | -123_000e0;

`;
